sidux-art-legacy (2009.01.1) unstable; urgency=low

  [ Bernard Gray ]
  * initial acceptable (looking) kde4 compat kdm theme for ouranos
    - xml could do with serious cleanup/simplification
    - needs more thorough testing, xdmcp currently failing for me
  * redo kdm theme - thanks to destructchaos aka rgb
  * fix ouranos/dm-kdm/Makefile, remove missing targets
  * make pontos/dm-kdm/background.svg 1920x1200 by default
  * migrate pontos/dm-kdm to kdm4
  * remove unneeded rect.svg from ouranos/dm-kdm/
  * remove temporary -destructchaos naming in KdmGreeters
  * change nyx/ to mirror source dir structure of newer art packages
  * change eros/ to mirror source dir structure of newer art packages
  * remove kde4 incompatible nyx/theme-kde/ files
  * change gaia/ to mirror source dir structure of newer art packages
  * update kdm theme xml files, thanks rgb

  [ Stefan Lippers-Hollmann ]
  * Initial release.
  * add bootstrap.sh, to generate debian/control.
  * add postinst handling to bootstrap.sh.
  * fix postinst handling.
  * remove stray */debian/control.
  * add compat layer 7.
  * remove individual changelogs.
  * harmonize wallpapers.
  * move svg into view.
  * merge copyrights, thanks to RoEn.
  * add CC-by-SA 3.0 license text.
  * update debian/copyright, thanks to RoEn.
  * bump standards version to 3.9.1, no changes necessary.
  * switch to dpkg-source 3.0 (native) format.
  * update machine-readable debian/copyright to DEP: 5, rev=135
  * s/Virtual package/metapackage, which makes lintian a bit happier about
    empty packages.
  * drop copyrights for chaos, this package never shipped its artwork.
  * add Αιθήρ
  * add Μώμος
  * add Μόρος
  * add Ύπνος
  * disable no yet buildable release artwork themes.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 05 Aug 2010 03:05:55 +0200