@@ -14,52 +14,66 @@ Architecture: all
 Depends: ${misc:Depends},
  gdm
 Description: GDM theme for sidux 2009-02 release
- the default GDM theme for the 2009-02 (Αιθήρ)
- sidux release.
-
-Package: sidux-art-kdm-aether
-Architecture: all
-Depends: ${misc:Depends},
- kdm
-Description: KDM theme for sidux 2009-02 release
- the default KDM theme for the 2009-02 (Αιθήρ)
- sidux release.
-
-Package: sidux-art-ksplash-aether
-Architecture: all
-Depends: ${misc:Depends},
- kdebase-workspace-bin
-Description: KDE ksplash theme for sidux 2009-02 release
- the default KDE ksplash theme for the 2009-02
- (Αιθήρ) sidux release, using the default ksplash engine
-
-Package: sidux-art-xsplash-aether
-Architecture: all
-Depends: ${misc:Depends},
- xfce4-session
-Description: Xfce splash theme for sidux 2009-02 release
- the default Xfce splash theme for the 2009-02
- (Αιθήρ) sidux release, based on balou theme engine.
-
-Package: sidux-art-wallpaper-aether
-Architecture: all
-Provides: sidux-art-wallpaper-theme
-Depends: ${misc:Depends}
-Description: sidux wallpaper for 2009-02 release
- The official wallpaper for the 2009-02 (Αιθήρ)
- sidux release.
+ release specific artwork theme for the GDM display manager to be used in
+ combination GTK2 based desktop environments like Xfce or LXDE.
+ .
+ GDM artwork for: sidux 2009-02 (Αιθήρ)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 
 Package: sidux-art-kde-aether
 Architecture: all
 Provides: sidux-art-kde-theme
 Depends: ${misc:Depends},
  sidux-art-ksplash-aether,
- sidux-art-kdm-aether,
+ sidux-art-kdm-aether
 Recommends: sidux-art-wallpaper-aether,
  dmz-cursor-theme
-Description: KDE theme for sidux 2009-02 release
- metapackage providing ksplash, kdm and KDE themes for the
- sidux 2009-02 (Αιθήρ) release
+Description: KDE theme for the sidux 2009-02 release
+ release specific metapackage depending on ksplash, kdm and KDE themes to be
+ used in combination with the K Desktop Environment. This package also
+ provides a release specific color scheme for KDE.
+ .
+ KDE artwork metapackage for: sidux 2009-02 (Αιθήρ)
+
+Package: sidux-art-kdm-aether
+Architecture: all
+Depends: ${misc:Depends},
+ kdm
+Description: KDM theme for the sidux 2009-02 release
+ release specific artwork theme for the KDM display manager to be used in
+ combination with the K Desktop Environment.
+ .
+ KDM artwork for: sidux 2009-02 (Αιθήρ)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
+
+Package: sidux-art-ksplash-aether
+Architecture: all
+Depends: ${misc:Depends},
+ kdebase-workspace-bin
+Description: KDE ksplash theme for the sidux 2009-02 release
+ release specific KDE ksplash theme, using the default ksplash engine.
+ .
+ KDE ksplash artwork for: sidux 2009-02 (Αιθήρ)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
+
+Package: sidux-art-wallpaper-aether
+Architecture: all
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Description: sidux wallpaper for the 2009-02 release
+ release specific wallpapers, compatible with the K Desktop Environment, Xfce,
+ LXDE and GNOME.
+ .
+ Wallpapers for: sidux 2009-02 (Αιθήρ)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 
 Package: sidux-art-xfce-aether
 Architecture: all
@@ -69,61 +83,88 @@ Depends: ${misc:Depends},
  sidux-art-gdm-aether
 Recommends: sidux-art-wallpaper-aether,
  dmz-cursor-theme
-Description: Xfce theme for sidux 2009-02 release
- metapackage providing Xfce-splash and gdm themes for
- sidux 2009-02 (Αιθήρ) release
+Description: Xfce theme for the sidux 2009-02 release
+ release specific metapackage depending on xfce4-session, gdm and Xfce themes
+ to be used in combination with the Xfce desktop environment.
+ .
+ Xfce artwork metapackage for: sidux 2009-02 (Αιθήρ)
 
+Package: sidux-art-xsplash-aether
+Architecture: all
+Depends: ${misc:Depends},
+ xfce4-session
+Description: Xfce splash theme for the sidux 2009-02 release
+ release specific Xfce splash theme, based on the balou theme engine.
+ .
+ Xfce xsplash artwork for: sidux 2009-02 (Αιθήρ)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 Package: sidux-art-gdm-momos
 Architecture: all
 Depends: ${misc:Depends},
  gdm
 Description: GDM theme for sidux 2009-03 release
- the default GDM theme for the 2009-03 (Μώμος)
- sidux release.
-
-Package: sidux-art-kdm-momos
-Architecture: all
-Depends: ${misc:Depends},
- kdm
-Description: KDM theme for sidux 2009-03 release
- the default KDM theme for the 2009-03 (Μώμος)
- sidux release.
-
-Package: sidux-art-ksplash-momos
-Architecture: all
-Depends: ${misc:Depends},
- kdebase-workspace-bin
-Description: KDE ksplash theme for sidux 2009-03 release
- the default KDE ksplash theme for the 2009-03
- (Μώμος) sidux release, using the default ksplash engine
-
-Package: sidux-art-xsplash-momos
-Architecture: all
-Depends: ${misc:Depends},
- xfce4-session
-Description: Xfce splash theme for sidux 2009-03 release
- the default Xfce splash theme for the 2009-03
- (Μώμος) sidux release, based on balou theme engine.
-
-Package: sidux-art-wallpaper-momos
-Architecture: all
-Provides: sidux-art-wallpaper-theme
-Depends: ${misc:Depends}
-Description: sidux wallpaper for 2009-03 release
- The official wallpaper for the 2009-03 (Μώμος)
- sidux release.
+ release specific artwork theme for the GDM display manager to be used in
+ combination GTK2 based desktop environments like Xfce or LXDE.
+ .
+ GDM artwork for: sidux 2009-03 (Μώμος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 
 Package: sidux-art-kde-momos
 Architecture: all
 Provides: sidux-art-kde-theme
 Depends: ${misc:Depends},
  sidux-art-ksplash-momos,
- sidux-art-kdm-momos,
+ sidux-art-kdm-momos
 Recommends: sidux-art-wallpaper-momos,
  dmz-cursor-theme
-Description: KDE theme for sidux 2009-03 release
- metapackage providing ksplash, kdm and KDE themes for the
- sidux 2009-03 (Μώμος) release
+Description: KDE theme for the sidux 2009-03 release
+ release specific metapackage depending on ksplash, kdm and KDE themes to be
+ used in combination with the K Desktop Environment. This package also
+ provides a release specific color scheme for KDE.
+ .
+ KDE artwork metapackage for: sidux 2009-03 (Μώμος)
+
+Package: sidux-art-kdm-momos
+Architecture: all
+Depends: ${misc:Depends},
+ kdm
+Description: KDM theme for the sidux 2009-03 release
+ release specific artwork theme for the KDM display manager to be used in
+ combination with the K Desktop Environment.
+ .
+ KDM artwork for: sidux 2009-03 (Μώμος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
+
+Package: sidux-art-ksplash-momos
+Architecture: all
+Depends: ${misc:Depends},
+ kdebase-workspace-bin
+Description: KDE ksplash theme for the sidux 2009-03 release
+ release specific KDE ksplash theme, using the default ksplash engine.
+ .
+ KDE ksplash artwork for: sidux 2009-03 (Μώμος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
+
+Package: sidux-art-wallpaper-momos
+Architecture: all
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Description: sidux wallpaper for the 2009-03 release
+ release specific wallpapers, compatible with the K Desktop Environment, Xfce,
+ LXDE and GNOME.
+ .
+ Wallpapers for: sidux 2009-03 (Μώμος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 
 Package: sidux-art-xfce-momos
 Architecture: all
@@ -133,71 +174,101 @@ Depends: ${misc:Depends},
  sidux-art-gdm-momos
 Recommends: sidux-art-wallpaper-momos,
  dmz-cursor-theme
-Description: Xfce theme for sidux 2009-03 release
- metapackage providing Xfce-splash and gdm themes for
- sidux 2009-03 (Μώμος) release
+Description: Xfce theme for the sidux 2009-03 release
+ release specific metapackage depending on xfce4-session, gdm and Xfce themes
+ to be used in combination with the Xfce desktop environment.
+ .
+ Xfce artwork metapackage for: sidux 2009-03 (Μώμος)
 
+Package: sidux-art-xsplash-momos
+Architecture: all
+Depends: ${misc:Depends},
+ xfce4-session
+Description: Xfce splash theme for the sidux 2009-03 release
+ release specific Xfce splash theme, based on the balou theme engine.
+ .
+ Xfce xsplash artwork for: sidux 2009-03 (Μώμος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 Package: sidux-art-wallpaper-momos-edu
 Provides: sidux-art-wallpaper-theme
 Depends: ${misc:Depends}
 Conflicts: sidux-art-wallpaper-momos
 Architecture: all
-Description: sidux-edu wallpaper for 2009-03 release
- the wallpaper for the 2009-03 (Μώμος)
- sidux-edu release. Includes 1920x1200, 1600x1200
- and 1280x1024 versions
-
+Description: seminarix wallpaper for 2009-03 release
+ release specific wallpapers, compatible with the K Desktop Environment, Xfce,
+ LXDE and GNOME.
+ .
+ Wallpapers for: sidux seminarix 2009-03 (Μώμος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 Package: sidux-art-gdm-moros
 Architecture: all
 Depends: ${misc:Depends},
  gdm
 Description: GDM theme for sidux 2009-04 release
- the default GDM theme for the 2009-04 (Μόρος)
- sidux release.
-
-Package: sidux-art-kdm-moros
-Architecture: all
-Depends: ${misc:Depends},
- kdm
-Description: KDM theme for sidux 2009-04 release
- the default KDM theme for the 2009-04 (Μόρος)
- sidux release.
-
-Package: sidux-art-ksplash-moros
-Architecture: all
-Depends: ${misc:Depends},
- kdebase-workspace-bin
-Description: KDE ksplash theme for sidux 2009-04 release
- the default KDE ksplash theme for the 2009-04
- (Μόρος) sidux release, using the default ksplash engine
-
-Package: sidux-art-xsplash-moros
-Architecture: all
-Depends: ${misc:Depends},
- xfce4-session
-Description: Xfce splash theme for sidux 2009-04 release
- the default Xfce splash theme for the 2009-04
- (Μόρος) sidux release, based on balou theme engine.
-
-Package: sidux-art-wallpaper-moros
-Architecture: all
-Provides: sidux-art-wallpaper-theme
-Depends: ${misc:Depends}
-Description: sidux wallpaper for 2009-04 release
- The official wallpaper for the 2009-04 (Μόρος)
- sidux release.
+ release specific artwork theme for the GDM display manager to be used in
+ combination GTK2 based desktop environments like Xfce or LXDE.
+ .
+ GDM artwork for: sidux 2009-04 (Μόρος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 
 Package: sidux-art-kde-moros
 Architecture: all
 Provides: sidux-art-kde-theme
 Depends: ${misc:Depends},
  sidux-art-ksplash-moros,
- sidux-art-kdm-moros,
+ sidux-art-kdm-moros
 Recommends: sidux-art-wallpaper-moros,
  dmz-cursor-theme
-Description: KDE theme for sidux 2009-04 release
- metapackage providing ksplash, kdm and KDE themes for the
- sidux 2009-04 (Μόρος) release
+Description: KDE theme for the sidux 2009-04 release
+ release specific metapackage depending on ksplash, kdm and KDE themes to be
+ used in combination with the K Desktop Environment. This package also
+ provides a release specific color scheme for KDE.
+ .
+ KDE artwork metapackage for: sidux 2009-04 (Μόρος)
+
+Package: sidux-art-kdm-moros
+Architecture: all
+Depends: ${misc:Depends},
+ kdm
+Description: KDM theme for the sidux 2009-04 release
+ release specific artwork theme for the KDM display manager to be used in
+ combination with the K Desktop Environment.
+ .
+ KDM artwork for: sidux 2009-04 (Μόρος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
+
+Package: sidux-art-ksplash-moros
+Architecture: all
+Depends: ${misc:Depends},
+ kdebase-workspace-bin
+Description: KDE ksplash theme for the sidux 2009-04 release
+ release specific KDE ksplash theme, using the default ksplash engine.
+ .
+ KDE ksplash artwork for: sidux 2009-04 (Μόρος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
+
+Package: sidux-art-wallpaper-moros
+Architecture: all
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Description: sidux wallpaper for the 2009-04 release
+ release specific wallpapers, compatible with the K Desktop Environment, Xfce,
+ LXDE and GNOME.
+ .
+ Wallpapers for: sidux 2009-04 (Μόρος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 
 Package: sidux-art-xfce-moros
 Architecture: all
@@ -207,71 +278,101 @@ Depends: ${misc:Depends},
  sidux-art-gdm-moros
 Recommends: sidux-art-wallpaper-moros,
  dmz-cursor-theme
-Description: Xfce theme for sidux 2009-04 release
- metapackage providing Xfce-splash and gdm themes for
- sidux 2009-04 (Μόρος) release
+Description: Xfce theme for the sidux 2009-04 release
+ release specific metapackage depending on xfce4-session, gdm and Xfce themes
+ to be used in combination with the Xfce desktop environment.
+ .
+ Xfce artwork metapackage for: sidux 2009-04 (Μόρος)
 
+Package: sidux-art-xsplash-moros
+Architecture: all
+Depends: ${misc:Depends},
+ xfce4-session
+Description: Xfce splash theme for the sidux 2009-04 release
+ release specific Xfce splash theme, based on the balou theme engine.
+ .
+ Xfce xsplash artwork for: sidux 2009-04 (Μόρος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 Package: sidux-art-wallpaper-moros-edu
 Provides: sidux-art-wallpaper-theme
 Depends: ${misc:Depends}
 Conflicts: sidux-art-wallpaper-moros
 Architecture: all
-Description: sidux-edu wallpaper for 2009-04 release
- the wallpaper for the 2009-04 (Μόρος)
- sidux-edu release. Includes 1920x1200, 1600x1200
- and 1280x1024 versions
-
+Description: seminarix wallpaper for 2009-04 release
+ release specific wallpapers, compatible with the K Desktop Environment, Xfce,
+ LXDE and GNOME.
+ .
+ Wallpapers for: sidux seminarix 2009-04 (Μόρος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 Package: sidux-art-gdm-hypnos
 Architecture: all
 Depends: ${misc:Depends},
  gdm
 Description: GDM theme for sidux 2010-01 release
- the default GDM theme for the 2010-01 (Ύπνος)
- sidux release.
-
-Package: sidux-art-kdm-hypnos
-Architecture: all
-Depends: ${misc:Depends},
- kdm
-Description: KDM theme for sidux 2010-01 release
- the default KDM theme for the 2010-01 (Ύπνος)
- sidux release.
-
-Package: sidux-art-ksplash-hypnos
-Architecture: all
-Depends: ${misc:Depends},
- kdebase-workspace-bin
-Description: KDE ksplash theme for sidux 2010-01 release
- the default KDE ksplash theme for the 2010-01
- (Ύπνος) sidux release, using the default ksplash engine
-
-Package: sidux-art-xsplash-hypnos
-Architecture: all
-Depends: ${misc:Depends},
- xfce4-session
-Description: Xfce splash theme for sidux 2010-01 release
- the default Xfce splash theme for the 2010-01
- (Ύπνος) sidux release, based on balou theme engine.
-
-Package: sidux-art-wallpaper-hypnos
-Architecture: all
-Provides: sidux-art-wallpaper-theme
-Depends: ${misc:Depends}
-Description: sidux wallpaper for 2010-01 release
- The official wallpaper for the 2010-01 (Ύπνος)
- sidux release.
+ release specific artwork theme for the GDM display manager to be used in
+ combination GTK2 based desktop environments like Xfce or LXDE.
+ .
+ GDM artwork for: sidux 2010-01 (Ύπνος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 
 Package: sidux-art-kde-hypnos
 Architecture: all
 Provides: sidux-art-kde-theme
 Depends: ${misc:Depends},
  sidux-art-ksplash-hypnos,
- sidux-art-kdm-hypnos,
+ sidux-art-kdm-hypnos
 Recommends: sidux-art-wallpaper-hypnos,
  dmz-cursor-theme
-Description: KDE theme for sidux 2010-01 release
- metapackage providing ksplash, kdm and KDE themes for the
- sidux 2010-01 (Ύπνος) release
+Description: KDE theme for the sidux 2010-01 release
+ release specific metapackage depending on ksplash, kdm and KDE themes to be
+ used in combination with the K Desktop Environment. This package also
+ provides a release specific color scheme for KDE.
+ .
+ KDE artwork metapackage for: sidux 2010-01 (Ύπνος)
+
+Package: sidux-art-kdm-hypnos
+Architecture: all
+Depends: ${misc:Depends},
+ kdm
+Description: KDM theme for the sidux 2010-01 release
+ release specific artwork theme for the KDM display manager to be used in
+ combination with the K Desktop Environment.
+ .
+ KDM artwork for: sidux 2010-01 (Ύπνος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
+
+Package: sidux-art-ksplash-hypnos
+Architecture: all
+Depends: ${misc:Depends},
+ kdebase-workspace-bin
+Description: KDE ksplash theme for the sidux 2010-01 release
+ release specific KDE ksplash theme, using the default ksplash engine.
+ .
+ KDE ksplash artwork for: sidux 2010-01 (Ύπνος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
+
+Package: sidux-art-wallpaper-hypnos
+Architecture: all
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Description: sidux wallpaper for the 2010-01 release
+ release specific wallpapers, compatible with the K Desktop Environment, Xfce,
+ LXDE and GNOME.
+ .
+ Wallpapers for: sidux 2010-01 (Ύπνος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 
 Package: sidux-art-xfce-hypnos
 Architecture: all
@@ -281,7 +382,20 @@ Depends: ${misc:Depends},
  sidux-art-gdm-hypnos
 Recommends: sidux-art-wallpaper-hypnos,
  dmz-cursor-theme
-Description: Xfce theme for sidux 2010-01 release
- metapackage providing Xfce-splash and gdm themes for
- sidux 2010-01 (Ύπνος) release
+Description: Xfce theme for the sidux 2010-01 release
+ release specific metapackage depending on xfce4-session, gdm and Xfce themes
+ to be used in combination with the Xfce desktop environment.
+ .
+ Xfce artwork metapackage for: sidux 2010-01 (Ύπνος)
 
+Package: sidux-art-xsplash-hypnos
+Architecture: all
+Depends: ${misc:Depends},
+ xfce4-session
+Description: Xfce splash theme for the sidux 2010-01 release
+ release specific Xfce splash theme, based on the balou theme engine.
+ .
+ Xfce xsplash artwork for: sidux 2010-01 (Ύπνος)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
