@@ -3,52 +3,66 @@ Architecture: all
 Depends: ${misc:Depends},
  gdm
 Description: GDM theme for sidux @VERSION@ release
- the default GDM theme for the @VERSION@ (@CODENAME@)
- sidux release.
-
-Package: sidux-art-kdm-@CODENAME_SAFE@
-Architecture: all
-Depends: ${misc:Depends},
- kdm
-Description: KDM theme for sidux @VERSION@ release
- the default KDM theme for the @VERSION@ (@CODENAME@)
- sidux release.
-
-Package: sidux-art-ksplash-@CODENAME_SAFE@
-Architecture: all
-Depends: ${misc:Depends},
- kdebase-workspace-bin
-Description: KDE ksplash theme for sidux @VERSION@ release
- the default KDE ksplash theme for the @VERSION@
- (@CODENAME@) sidux release, using the default ksplash engine
-
-Package: sidux-art-xsplash-@CODENAME_SAFE@
-Architecture: all
-Depends: ${misc:Depends},
- xfce4-session
-Description: Xfce splash theme for sidux @VERSION@ release
- the default Xfce splash theme for the @VERSION@
- (@CODENAME@) sidux release, based on balou theme engine.
-
-Package: sidux-art-wallpaper-@CODENAME_SAFE@
-Architecture: all
-Provides: sidux-art-wallpaper-theme
-Depends: ${misc:Depends}
-Description: sidux wallpaper for @VERSION@ release
- The official wallpaper for the @VERSION@ (@CODENAME@)
- sidux release.
+ release specific artwork theme for the GDM display manager to be used in
+ combination GTK2 based desktop environments like Xfce or LXDE.
+ .
+ GDM artwork for: sidux @VERSION@ (@CODENAME@)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 
 Package: sidux-art-kde-@CODENAME_SAFE@
 Architecture: all
 Provides: sidux-art-kde-theme
 Depends: ${misc:Depends},
  sidux-art-ksplash-@CODENAME_SAFE@,
- sidux-art-kdm-@CODENAME_SAFE@,
+ sidux-art-kdm-@CODENAME_SAFE@
 Recommends: sidux-art-wallpaper-@CODENAME_SAFE@,
  dmz-cursor-theme
-Description: KDE theme for sidux @VERSION@ release
- metapackage providing ksplash, kdm and KDE themes for the
- sidux @VERSION@ (@CODENAME@) release
+Description: KDE theme for the sidux @VERSION@ release
+ release specific metapackage depending on ksplash, kdm and KDE themes to be
+ used in combination with the K Desktop Environment. This package also
+ provides a release specific color scheme for KDE.
+ .
+ KDE artwork metapackage for: sidux @VERSION@ (@CODENAME@)
+
+Package: sidux-art-kdm-@CODENAME_SAFE@
+Architecture: all
+Depends: ${misc:Depends},
+ kdm
+Description: KDM theme for the sidux @VERSION@ release
+ release specific artwork theme for the KDM display manager to be used in
+ combination with the K Desktop Environment.
+ .
+ KDM artwork for: sidux @VERSION@ (@CODENAME@)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
+
+Package: sidux-art-ksplash-@CODENAME_SAFE@
+Architecture: all
+Depends: ${misc:Depends},
+ kdebase-workspace-bin
+Description: KDE ksplash theme for the sidux @VERSION@ release
+ release specific KDE ksplash theme, using the default ksplash engine.
+ .
+ KDE ksplash artwork for: sidux @VERSION@ (@CODENAME@)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
+
+Package: sidux-art-wallpaper-@CODENAME_SAFE@
+Architecture: all
+Provides: sidux-art-wallpaper-theme
+Depends: ${misc:Depends}
+Description: sidux wallpaper for the @VERSION@ release
+ release specific wallpapers, compatible with the K Desktop Environment, Xfce,
+ LXDE and GNOME.
+ .
+ Wallpapers for: sidux @VERSION@ (@CODENAME@)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
 
 Package: sidux-art-xfce-@CODENAME_SAFE@
 Architecture: all
@@ -58,7 +72,20 @@ Depends: ${misc:Depends},
  sidux-art-gdm-@CODENAME_SAFE@
 Recommends: sidux-art-wallpaper-@CODENAME_SAFE@,
  dmz-cursor-theme
-Description: Xfce theme for sidux @VERSION@ release
- metapackage providing Xfce-splash and gdm themes for
- sidux @VERSION@ (@CODENAME@) release
+Description: Xfce theme for the sidux @VERSION@ release
+ release specific metapackage depending on xfce4-session, gdm and Xfce themes
+ to be used in combination with the Xfce desktop environment.
+ .
+ Xfce artwork metapackage for: sidux @VERSION@ (@CODENAME@)
 
+Package: sidux-art-xsplash-@CODENAME_SAFE@
+Architecture: all
+Depends: ${misc:Depends},
+ xfce4-session
+Description: Xfce splash theme for the sidux @VERSION@ release
+ release specific Xfce splash theme, based on the balou theme engine.
+ .
+ Xfce xsplash artwork for: sidux @VERSION@ (@CODENAME@)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
