@@ -3,8 +3,11 @@ Provides: sidux-art-wallpaper-theme
 Depends: ${misc:Depends}
 Conflicts: sidux-art-wallpaper-@CODENAME_SAFE@
 Architecture: all
-Description: sidux-edu wallpaper for @VERSION@ release
- the wallpaper for the @VERSION@ (@CODENAME@)
- sidux-edu release. Includes 1920x1200, 1600x1200
- and 1280x1024 versions
-
+Description: seminarix wallpaper for @VERSION@ release
+ release specific wallpapers, compatible with the K Desktop Environment, Xfce,
+ LXDE and GNOME.
+ .
+ Wallpapers for: sidux seminarix @VERSION@ (@CODENAME@)
+ .
+ This package does not override existing theme configurations and needs to be
+ selected manually.
